fixed footer having a weird color gap between emoji and top edge

--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,10 +1,13 @@
-.footer {
+.footer-container {
   margin: 0 auto;
   margin-top: 2%;
-  padding-top: 1.5%;
   width: 98.5%;
   min-height: 100px!important;
   position: relative;
   background-color: rgba(192, 192, 192, 0.3);
   border-radius: 6px;
+}
+
+.footer {
+  padding-top: 1.5%;
 }
